plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/misc/mismatchedAttributesDependencySource/producer/src/jsMain/kotlin/test/producer_jsMain_api.kt
package test

actual class <!LINE_MARKER("descr='Has expects in project.producer.commonMain module'")!>CommonMainExpect<!> {
    actual fun <!LINE_MARKER("descr='Has expects in project.producer.commonMain module'")!>commonApi<!>() { }

    fun jsApi() { }
}

fun produceJsMainExpect(): CommonMainExpect = null!!
fun consumeJsMainExpect(e: CommonMainExpect) { }
